Fixed course list overflow + css touchup

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -59,6 +54,7 @@ ul {
   padding-bottom: 3vh;
   border-radius: 6px;
   border: 2px solid black;
+  overflow-y: scroll;
 }
 
 .exCredit {
