--- a/src/components/components.css
+++ b/src/components/components.css
@@ -2,10 +2,15 @@
     text-align: center;
     font-size: 30px;
     font-weight: 500;
+    color: white;
     vertical-align: bottom;
     border-radius: 5px;
     margin: 0px;
-    background-color: lightblue;
+    background-color: #0055A2;
+}
+
+.courseCode:hover {
+    color: #E5A823;
 }
 
 .Collapsible__contentInner {
@@ -13,11 +18,9 @@
 }
 
 .Collapsible {
-    border: 2px solid gray;
-    border-radius: 6px;
+    border: 2px solid #939597;
+    border-radius: 7px;
     transition-delay: 200;
-}
-
-.courseCode:hover {
-    background-color: lightgrey;
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
